# ChangeLog for mail-client/exmh
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/exmh/ChangeLog,v 1.5 2004/08/08 11:24:42 tomk Exp $

*exmh-2.6.3-r1 (08 Aug 2004)

  08 Aug 2004; Tom Knight <tomk@gentoo.org> +exmh-2.5-r1.ebuild,
  exmh-2.5.ebuild, +exmh-2.6.3-r1.ebuild:
  Added docs and config file to fix bug #30959, tidied up ebuilds

  03 Jun 2004; David Holm <dholm@gentoo.org> exmh-2.6.3.ebuild:
  Added to ~ppc.

*exmh-2.6.3 (29 May 2004)

  29 May 2004; Seemant Kulleen <seemant@gentoo.org> +metadata.xml,
  +files/exmh-2.5-conf.patch, +files/exmh-2.6.3-conf.patch, +exmh-2.5.ebuild,
  +exmh-2.6.3.ebuild:
  Moved from net-mail/exmh to mail-client/exmh.

  22 Feb 2004; Aron Griffis <agriffis@gentoo.org> exmh-2.5.ebuild,
  exmh-2.6.3.ebuild:
  Remove arm keywords

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords

*exmh-2.6.3 (31 Jul 2003)

  31 Jul 2003; Ryan Phillips <rphillips@gentoo.org> exmh-2.6.3.ebuild :
  updated version and added net-mail/metamail deps
 
*exmh-2.5 (31 May 2002)

  31 Jul 2003; Ryan Phillips <rphillips@gentoo.org> exmh-2.5.ebuild :
  Added net-mail/metamail to deps
  
  31 May 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :

  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.
