@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/exmh
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/exmh/ChangeLog,v 1.5 2004/08/08 11:24:42 tomk Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/exmh/ChangeLog,v 1.6 2004/09/22 23:28:24 ticho Exp $
+
+  23 Sep 2004; Andrej Kacian <ticho@gentoo.org> exmh-2.6.3-r1.ebuild,
+  exmh-2.6.3.ebuild:
+  Stable on x86. Use epatch instead of patch in 2.6.3.
 
 *exmh-2.6.3-r1 (08 Aug 2004)
 
